# cpp-template_forked

./: CMakeLists.txt  CODEOWNERS  Jenkinsfile  README.md  conanfile.txt
src/: main.cpp
